--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -11,7 +11,7 @@
         <ul class="nav pull-right">
         	<% if current_user.nil? %>
           	<li><a href="#">1 Click Save</a></li>
-            <li><a href="/users/sign_up">Sign Up</a></li>
+            <li><a href="/signup">Sign Up</a></li>
             <li class="divider-vertical"></li>
             <li class="dropdown">
               <a class="dropdown-toggle" href="#" data-toggle="dropdown">Sign In <strong class="caret"></strong></a>
