--- a/app/views/layouts/_sidebar.html.erb
+++ b/app/views/layouts/_sidebar.html.erb
@@ -3,19 +3,28 @@
       <ul class="nav nav-list">
         <li class="nav-header">Bookmarklet</li>
         <li><%= image_tag 'bookmarklet.png' %><li>
-        <li class="nav-header">Playlist Pages</li>
-        <li><%= link_to "Add a Bookmark to this List", new_playlist_user_bookmark_path(@playlist)  %></li>
-        <li><%= link_to 'Create New Playlist', new_playlist_path%></li>
-        <li><%= link_to 'Index of all Playlists', playlists_path%></li>
-        <li class="nav-header">Playlists</li>
-        <% @lists.each do |pl|%>
-            <% if pl == @playlist %>
-                <li class="active">
-            <% else %>
-                <li>
+        <li class="nav-header">Actions</li> 
+        <% if @playlist and @playlist.id %>
+            <% if (@playlist.user == current_user) and (current_page?(@playlist) or current_page?(edit_playlist_path(@playlist.id))) and @playlist != current_user.default_list %>
+                <li><%= link_to "Add a Bookmark to "+@playlist.playlist_name, new_playlist_user_bookmark_path(@playlist)  %></li>
             <% end %>
-                <%=link_to pl.playlist_name, pl %>
-            </li>
+        <% end %>
+        <li><%= link_to "Add a Bookmark", new_playlist_user_bookmark_path(current_user.default_list)  %></li>
+        <li <%= "class=active" if current_page?(new_playlist_path) %> ><%= link_to 'Create New Playlist', new_playlist_path%></li>
+        <li <%= "class=active" if current_page?(playlists_path) %> ><%= link_to 'Index of All My Playlists', playlists_path%></li>
+        <li class="nav-header">My Playlists</li>
+        <% if !(@lists.nil?) %>
+            <% @lists.each do |pl|%>
+                <% if pl == @playlist %>
+                    <li class="active">
+                <% else %>
+                    <li>
+                <% end %>
+                    <%=link_to pl.playlist_name, pl %>
+                </li>
+            <% end %>
+        <% else %>
+            <li style="font-size:12px">You don't have any playlists yet</li>
         <% end %>
       </ul>
     </div>
