--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -7,17 +7,18 @@
 			  <div class="span3 offset1">
 			  	<div class="center-button-table"><div class="center-button-cell">
 			  		<!-- <a href="/users/" class="btn btn-primary btn-large signup-modal-link" data-remote>Sign Up &raquo;</a><br /> -->
-			  		<%= link_to "Sign Up »", upgrade_user_path(@user), :class=>"btn btn-primary btn-large signup-modal-link", "data-remote" => true, "data-type" => "html" %>
+			  		<% if @user.id %>
+			  			<%= link_to "Sign Up »", upgrade_user_path(@user), :class=>"btn btn-primary btn-large signup-modal-link", "data-remote" => true, "data-type" => "html" %>
+			  		<% else %>
+				  		<%= link_to "Sign Up »", new_user_path, :class=>"btn btn-primary btn-large signup-modal-link", "data-remote" => true, "data-type" => "html" %>
+			  		<% end %>
 			  		<br />
-			  		<div id="signup-modal-holder">
-					    <%= render '/users/modal_new' %>
-					  </div>
 			  		<a href="#signing-up" id="signing-anchor-link" data-toggle="tooltip" title="Click this link to scroll to the part detailing signing up." data-placement="bottom" style="font-size: 14px; font-weight:500;line-height:14px;">More Information.</a>
 			  	</div></div>
 			  </div>
 			  <div class="span4">
 			  	<div class="center-button-table"><div class="center-button-cell">
-			  		<a href="#" class="btn btn-primary btn-large">Browse &raquo;</a><br />
+			  		<a href="/playlists/16" class="btn btn-primary btn-large">Browse &raquo;</a><br />
 			  		<a href="---move to join anchor and flash--" data-toggle="tooltip" title="This button will take you my playlist so you can explore how this works." data-placement="bottom" style="font-size: 14px; font-weight:500;line-height:14px;">More Information.</a>
 			  	</div></div>
 			  </div>
@@ -56,7 +57,11 @@
 				<p>Just by playing through a super-simple PlayThru™ game, we can filter out bots and give you a profile. After that, you can give edit your profile to give yourself a username and password if you want.</p>
 				<p>One thing: for this site to work, you do need cookies and javascript enabled, and it works best in up-to-date versions of Chrome, Firefox, Safari, and IE 7+. </p>
 				<div class="center-button-table"><div class="center-button-cell">
-		  		<%= link_to "Sign Up »", upgrade_user_path(@user), :class=>"btn btn-primary signup-modal-link", "data-remote" => true, "data-type" => "html" %>
+		  		<% if @user.id %>
+		  			<%= link_to "Sign Up »", upgrade_user_path(@user), :class=>"btn btn-primary signup-modal-link", "data-remote" => true, "data-type" => "html" %>
+		  		<% else %>
+			  		<%= link_to "Sign Up »", new_user_path, :class=>"btn btn-primary signup-modal-link", "data-remote" => true, "data-type" => "html" %>
+		  		<% end %>
 			  </div></div>
 			</div>
 		</div>
