--- a/app/assets/stylesheets/playlists.css.scss
+++ b/app/assets/stylesheets/playlists.css.scss
@@ -117,8 +117,10 @@
   min-height: 20px;
   padding: 10px;
   margin-bottom: 20px;
-  background: #C5FFD4;
-  border: 6px solid #B8FFC2;
+  //background: #C5FFD4;
+  //border: 6px solid #B8FFC2;
+  background: #D2FFE2;
+  border: 6px solid #C7FFDB;
   -webkit-border-radius: 4px;
   -moz-border-radius: 4px;
   border-radius: 4px;
