added @publisher_html from AYAH into modal_upgrade

--- a/app/views/users/_modal_upgrade.html.erb
+++ b/app/views/users/_modal_upgrade.html.erb
@@ -10,6 +10,7 @@
       <%= f.password_field :password, :placeholder=>"Password" %>
       <br />
       <%= f.password_field :password_confirmation, :placeholder=>"Password Confirmation" %>
+      <%= @publisher_html.try(:html_safe)  %>
     </div>
     <div class="modal-footer">
       <div class = "form-buttons">
