playthru invisble hiding

--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -8,10 +8,13 @@
 			  	<div class="center-button-table"><div class="center-button-cell">
 			  		<!-- <a href="/users/" class="btn btn-primary btn-large signup-modal-link" data-remote>Sign Up &raquo;</a><br /> -->
 			  		<% if @user.id %>
-			  			<%= link_to "Sign Up »", upgrade_user_path(@user), :class=>"btn btn-primary btn-large signup-modal-link", "data-remote" => true, "data-type" => "html" %>
+			  			<%= link_to "Sign Up »", '#', :class=>"btn btn-primary btn-large", :id=>"signup-modal-link", "data-remote" => true, "data-type" => "html" %>
 			  		<% else %>
-				  		<%= link_to "Sign Up »", new_user_path, :class=>"btn btn-primary btn-large signup-modal-link", "data-remote" => true, "data-type" => "html" %>
+				  		<%= link_to "Sign Up »", '#', :class=>"btn btn-primary btn-large", :id=> "signup-modal-link", "data-remote" => true, "data-type" => "html" %>
 			  		<% end %>
+			  		<div id="signup-modal-holder">
+			  			<%= render 'modal_upgrade' %>
+			  		</div>
 			  		<br />
 			  		<a href="#signing-up" id="signing-anchor-link" data-toggle="tooltip" title="Click this link to scroll to the part detailing signing up." data-placement="bottom" style="font-size: 14px; font-weight:500;line-height:14px;">More Information.</a>
 			  	</div></div>
