new user modal div id to class change

--- a/app/views/users/_modal_upgrade.html.erb
+++ b/app/views/users/_modal_upgrade.html.erb
@@ -1,4 +1,4 @@
-<div class="modal hide fade" id="signup-modal" tabindex="-1">
+<div class="modal hide fade signup-modal" tabindex="-1">
   <div class="modal-header">
     <button type="button" class="close" data-dismiss="modal">×</button>
     <h2>Sign Up</h2>
