--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -12,6 +12,8 @@
  *= require_tree .
  */
 
+ @import url("http://fonts.googleapis.com/css?family=Condiment");
+
 .navbar img {
 	vertical-align:middle;
 	-ms-filter:"progid:DXImageTransform.Microsoft.Alpha(Opacity=50)";
@@ -35,3 +37,56 @@
 	max-width:15px;
 	margin-bottom:3px;
 }
+
+.logo {
+	font-family: 'Condiment', cursive;
+	font-size:22px;
+	color:#3880FF;
+}
+
+#temp-acct-popover-holder+.popover {
+	width: 255px;
+	font-size:12px;
+	font-weight:500;
+	color:#C70002;
+	//background-color:#E4FF92;
+	.popover-content{
+		text-align:center;
+		padding:5px;
+	}
+	.arrow{
+		left:80%;
+	}
+}
+
+//.navbar .container-fluid {
+//	padding-right:0px;
+//	padding-bottom:0px;
+//	.pull-right 
+//	{
+//		height:43px;
+//		li.dropdown {
+//			//dropdown open override below
+//			height:43px;
+//			padding-left:10px;
+//			padding-right:5px;
+//			/* IE10 Consumer Preview */ 
+//			background-image: -ms-linear-gradient(top left, #1A1A1A 0%, #2448BD 100%);
+//			/* Mozilla Firefox */ 
+//			background-image: -moz-linear-gradient(top left, #1A1A1A 0%, #2448BD 100%);
+//			/* Opera */ 
+//			background-image: -o-linear-gradient(top left, #1A1A1A 0%, #2448BD 100%);
+//			/* Webkit (Safari/Chrome 10) */ 
+//			background-image: -webkit-gradient(linear, left top, right bottom, color-stop(0, #1A1A1A), color-stop(1, #2448BD));
+//			/* Webkit (Chrome 11+) */ 
+//			background-image: -webkit-linear-gradient(top left, #1A1A1A 0%, #2448BD 100%);
+//			/* W3C Markup, IE10 Release Preview */ 
+//			background-image: linear-gradient(to bottom right, #1A1A1A 0%, #2448BD 100%);
+//		}
+//	}
+//}
+//
+////dropdown open override
+//.navbar-inverse .nav .pull-right li.dropdown.open > .dropdown-toggle{
+//	background-color:transparent;
+//}
