--- a/app/assets/stylesheets/playlists.css.scss
+++ b/app/assets/stylesheets/playlists.css.scss
@@ -68,11 +68,12 @@
 
 	.list-action-links{
 		position:relative;
+		margin-right:8px;
 		height:80px;
 		width:160px;
 		float:right;
 		a {
-			width:60px;
+			width:54px;
 			text-align:center;
 			position:absolute;
 			top:29px;
@@ -95,6 +96,9 @@
 
 }
 
+.show_bookmark:hover {
+	background:#D2FFE2;
+}
 //detail classes
 #detail_bookmark_view {
 	margin:10px;
