--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -1,13 +1,14 @@
 	<div class="span10 offset1">
 		<div class="hero-unit home">
 		  <h1>Welcome to VRepo!</h1>
-		  <h3>It's an online utility I made to bookmark my porn. You can explore by trying some stuff out.</h3>
+		  <h3>It's an online utility I made to bookmark my porn.</h3>
+		  <h3>You can explore by trying some stuff out.</h3>
 		  <br/>
 			<div class="row-fluid options">
 			  <div class="span3 offset1">
 			  	<div class="center-button-table"><div class="center-button-cell">
 			  		<!-- <a href="/users/" class="btn btn-primary btn-large signup-modal-link" data-remote>Sign Up &raquo;</a><br /> -->
-			  		<% if @user.id %>
+			  		<% if current_user%>
 			  			<%= link_to "Sign Up »", '#', :class=>"btn btn-primary btn-large", :id=>"signup-modal-link" %>
 			  			<div id="signup-modal-holder">
 				  			<%= render '/users/modal_upgrade' %>
@@ -15,20 +16,26 @@
 			  		<% else %>
 				  		<%= link_to "Sign Up »", '#', :class=>"btn btn-primary btn-large", :id=>"signup-modal-link" %>
 			  		<% end %>
-			  		
 			  		<br />
 			  		<a href="#signing-up" id="signing-anchor-link" data-toggle="tooltip" title="Click this link to scroll to the part detailing signing up." data-placement="bottom" style="font-size: 14px; font-weight:500;line-height:14px;">More Information.</a>
 			  	</div></div>
 			  </div>
 			  <div class="span4">
 			  	<div class="center-button-table"><div class="center-button-cell">
-			  		<a href="/playlists/16" class="btn btn-primary btn-large">Browse &raquo;</a><br />
+			  		<a href="/playlists/7" class="btn btn-primary btn-large">Browse &raquo;</a><br />
 			  		<a href="---move to join anchor and flash--" data-toggle="tooltip" title="This button will take you my playlist so you can explore how this works." data-placement="bottom" style="font-size: 14px; font-weight:500;line-height:14px;">More Information.</a>
 			  	</div></div>
 			  </div>
 			  <div class="span3">
 			  	<div class="center-button-table"><div class="center-button-cell">
-			  		<a href="#" class="btn btn-primary btn-large">Add a Link &raquo;</a><br />
+			  		<% if current_user%>
+				  		<a href="#" class="btn btn-primary btn-large">Add a Link &raquo;</a><br />
+			  			<div id="new-bookmark-modal-holder">
+				  			<%= render '/user_bookmarks/modal_new' %>
+				  		</div>
+			  		<% else %>
+				  		<a href="#" class="btn btn-primary btn-large">Add a Link &raquo;</a><br />
+			  		<% end %>
 			  		<a href="#adding-links" id="add-anchor-link" data-toggle="tooltip" title="Click this link to scroll to the part detailing signing up." data-placement="bottom" style="font-size: 14px; font-weight:500;line-height:14px;">More Information.</a>
 			  	</div></div>
 			  </div>
@@ -61,7 +68,7 @@
 				<p>Just by playing through a super-simple PlayThru™ game, we can filter out bots and give you a profile. After that, you can give edit your profile to give yourself a username and password if you want.</p>
 				<p>One thing: for this site to work, you do need cookies and javascript enabled, and it works best in up-to-date versions of Chrome, Firefox, Safari, and IE 7+. </p>
 				<div class="center-button-table"><div class="center-button-cell">
-		  		<% if @user.id %>
+		  		<% if current_user %>
 		  			<%= link_to "Sign Up »", upgrade_user_path(@user), :class=>"btn btn-primary signup-modal-link", "data-remote" => true, "data-type" => "html" %>
 		  		<% else %>
 			  		<%= link_to "Sign Up »", new_user_path, :class=>"btn btn-primary signup-modal-link", "data-remote" => true, "data-type" => "html" %>
@@ -109,7 +116,7 @@
 				<p>Similar to the drag-and-drop way: Click the button below (there'll be a button like this on your standard home page), and a modal window will come up and let you set the title and submit the link.</p>
 			 	<p>From there, it'll take you to the page containing your links.</p>
 			 	<div class="center-button-table"><div class="center-button-cell">
-		  		<a href="#" class="btn btn-primary">Add a Link &raquo;</a><br />
+		  		<a href="" class="btn btn-primary">Add a Link &raquo;</a><br />
 			  </div></div>
 			</div>
 		</div>
