--- a/app/views/user_bookmarks/_modal_new.html.erb
+++ b/app/views/user_bookmarks/_modal_new.html.erb
@@ -1,12 +1,7 @@
 <div class="modal hide fade new-bookmark-modal" tabindex="-1">
   <div class="modal-header">
     <button type="button" class="close" data-dismiss="modal">×</button>
-		<h2>New Bookmark for
-		  <% if(@playlist == current_user.default_list) %>
-		    <%= current_user.username %></h2>
-		  <% else %>
-		    <%= @playlist.playlist_name %></h2>
-		  <% end %>
+		<h2>New Bookmark </h2>
 	</div>
 	<%= form_for @user_bookmark, :url => [@playlist, @user_bookmark] , :method => :post, :html => { "data-type" => "json"}, :remote=>true do |f|%>
 	<div class="modal-body">
@@ -14,6 +9,7 @@
 			<%= f.fields_for :bookmark_url, @bookmark_url do |f_bu| %>
 				<%= f_bu.text_field :url, :placeholder=>'URL'%>
 			<% end %>
+	<% end %>
 	</div>
 	<div class="modal-footer">
 		<div class = "form-buttons">
