--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -29,7 +29,11 @@
             	<li><%= link_to 'Upgrade to a full account', edit_user_path(current_user),"		tabindex" => "-1" %></li>
             	<li><%= link_to 'Log Out', logout_path , "tabindex" => "-1"%></li> <!-- some kind of notice that temp users can't get shit back if they close this -->
             <% else %>
-              <li class="dropdown" id="temp-acct-popover-holder" data-html=true data-toggle="popover" data-placement="bottom" data-trigger="manual" data-content="<p id=temp-acct-popover>An account has been created for you.<br />The password is the same as the username.</div>">
+              <%= if current_user.human %>
+                <li class="dropdown">
+              <% else %>
+                <li class="dropdown" id="temp-acct-popover-holder" data-html=true data-toggle="popover" data-placement="bottom" data-trigger="manual" data-content="<p id=temp-acct-popover>An account has been created for you.<br />The password is the same as the username.</div>">
+              <% end %>
                 <a href="#" class="dropdown-toggle" data-toggle="dropdown"><img src='/assets/glyphicons/glyphicons_003_user.png'> </img><%= current_user.username %> <b class="caret"></b></a>
                 <ul class="dropdown-menu">
 		            	<li><%=link_to "Bookmarks Home", current_user , "tabindex" => "-1"%></li>
