--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -25,7 +25,7 @@
               </div>
             </li>
           <% else %>
-            <%= if current_user.human %>
+            <% if current_user.human %>
               <li class="dropdown">
             <% else %>
               <li class="dropdown" id="temp-acct-popover-holder" data-html=true data-toggle="popover" data-placement="bottom" data-trigger="manual" data-content="<p id=temp-acct-popover>An account has been created for you.<br />The password is the same as the username.</div>">
