--- a/app/views/users/_modal_upgrade.html.erb
+++ b/app/views/users/_modal_upgrade.html.erb
@@ -3,7 +3,7 @@
     <button type="button" class="close" data-dismiss="modal">×</button>
     <h2>Sign Up</h2>
   </div>
-  <%= form_for @user, :url=>process_upgrade_user_path(@user), :method => :put, :html => { "data-type" => "json"}, :remote=>true do |f|%>
+  <%= form_for @user, :method => :put, :html => { "data-type" => "json"}, :remote=>true do |f|%>
     <div class="modal-body">
       <%= f.text_field :username, :placeholder=>"Username" %>
       <br />
