--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -5,19 +5,22 @@
 		  <h3>You can explore by trying some stuff out.</h3>
 		  <br/>
 			<div class="row-fluid options">
+	  		<% if current_user%>
 			  <div class="span3 offset1">
 			  	<div class="center-button-table"><div class="center-button-cell">
 			  		<!-- <a href="/users/" class="btn btn-primary btn-large signup-modal-link" data-remote>Sign Up &raquo;</a><br /> -->
-			  		<% if current_user%>
-			  			<%= link_to "Sign Up »", '#', :class=>"btn btn-primary btn-large", :id=>"signup-modal-link" %>
-			  			<div id="signup-modal-holder">
-				  			<%= render '/users/modal_upgrade' %>
-				  		</div>
-			  		<% else %>
-				  		<%= link_to "Sign Up »", '#', :class=>"btn btn-primary btn-large", :id=>"signup-modal-link" %>
-			  		<% end %>
-			  		<br />
-			  		<a href="#signing-up" id="signing-anchor-link" data-toggle="tooltip" title="Click this link to scroll to the part detailing signing up." data-placement="bottom" style="font-size: 14px; font-weight:500;line-height:14px;">More Information.</a>
+			  			<% if current_user.human? %>
+				  			<%= link_to "You're logged in", '#', :class=>"btn btn-primary btn-large", :id=>"signup-modal-link" %>
+				  			<!-- some kind of popover -->
+					  	<% else %>
+				  			<%= link_to "Sign In", '#', :class=>"btn btn-primary btn-large", :id=>"signup-modal-link" %>
+				  			<!-- Something that triggers login-->
+				  			<div id="signup-modal-holder">
+					  			<%= render '/users/modal_edit' %>
+					  		</div>
+					  		<br />
+					  		<a href="#signing-up" id="signing-anchor-link" data-toggle="tooltip" title="Click this link to scroll to the part detailing signing up." data-placement="bottom" style="font-size: 14px; font-weight:500;line-height:14px;">More Information.</a>
+					  	<% end %>
 			  	</div></div>
 			  </div>
 			  <div class="span4">
@@ -40,6 +43,45 @@
 			  		<% end %>
 			  	</div></div>
 			  </div>
+			  <% else %>
+			  <div class="span3">
+			  	<div class="center-button-table"><div class="center-button-cell">
+			  			<%= link_to "Sign Up »", '#', :class=>"btn btn-primary btn-large", :id=>"signup-modal-link" %>
+			  			<div id="signup-modal-holder">
+				  			<%= render '/users/modal_new' %>
+				  		</div>
+			  		<br />
+			  		<a href="#signing-up" id="signing-anchor-link" data-toggle="tooltip" title="Click this link to scroll to the part detailing signing up." data-placement="bottom" style="font-size: 14px; font-weight:500;line-height:14px;">More Information.</a>
+			  	</div></div>
+			  </div>
+			  <div class="span3">
+			  	<div class="center-button-table"><div class="center-button-cell">
+			  		<!-- something that triggers sign-in -->
+		  			<%= link_to "Sign In", '#', :class=>"btn btn-primary btn-large", :id=>"signin-flash" %>
+			  		<br />
+			  	</div></div>
+			  </div>
+			  <div class="span3">
+			  	<div class="center-button-table"><div class="center-button-cell">
+			  		<a href="/playlists/7" class="btn btn-primary btn-large">Browse &raquo;</a><br />
+			  		<a href="---move to join anchor and flash--" data-toggle="tooltip" title="This button will take you my playlist so you can explore how this works." data-placement="bottom" style="font-size: 14px; font-weight:500;line-height:14px;">More Information.</a>
+			  	</div></div>
+			  </div>
+			  <div class="span3">
+			  	<div class="center-button-table"><div class="center-button-cell">
+			  		<% if current_user%>
+				  		<a href="#" class="btn btn-primary btn-large new-bookmark-modal-link">Add a Link &raquo;</a><br />
+			  			<div class="new-bookmark-modal-holder">
+				  			<%= render '/user_bookmarks/modal_new' %>
+				  		</div>
+				  		<a href="#adding-links" id="add-anchor-link" data-toggle="tooltip" title="Click this link to scroll to the part detailing signing up." data-placement="bottom" style="font-size: 14px; font-weight:500;line-height:14px;">More Information.</a>
+			  		<% else %>
+				  		<a href="#" class="btn btn-primary btn-large disabled">Add a Link &raquo;</a><br />
+				  		<a href="#adding-links" id="add-anchor-link" data-toggle="tooltip" title="This button is disabled because you're not logged into any kind of account. Click this link to scroll to the part detailing signing up." data-placement="bottom" style="font-size: 14px; font-weight:500;line-height:14px;">More Information.</a>
+			  		<% end %>
+			  	</div></div>
+			  </div>
+			  <% end %>
 			</div>
 		</div>
 	</div>
@@ -82,7 +124,7 @@
 			<div class="span12">
 				<h4>Your Privacy</h4>
 				<p>I'm <strong>not asking for your email address.</strong> If I ever do want it then I'll ask ya'll nicely, and it'll be entirely optional. I don't collect/share any kind of personal data. Here is a link to the site's privacy policy, and here's a link to frequently asked questions. I take your privacy seriously: I realize that's kind of the entire point of using this.</p>
-<br />
+				<br />
 				<p>As for the bookmarks and playlists you make, they'll be public by default so that we can work on recommending things to people based on things they have in common. <strong>However</strong>, you have the option of making any of your individual playlists or all the bookmarks and playlists in your account private. You just have to create a profile and change the settings on your profile page.</p>
 			</div>
 		</div>
