--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -1,4 +1,4 @@
-<h1>Edit User</h1>
+<h1>Edit Account: <%= @user.username %></h1>
 <%= form_for @user do |f| %>
   <% if @user.errors.any? %>
     <div class="error_messages">
@@ -10,21 +10,11 @@
       </ul>
     </div>
   <% end %>
-
-  <div class="field">
-    <%= f.label :username %><br />
-    <%= f.text_field :username %>
-  </div>
-  <div class="field">
-    <%= f.label :password %><br />
-    <%= f.password_field :password %>
-  </div>
-  <div class="field">
-    <%= f.label :password_confirmation %><br />
-    <%= f.password_field :password_confirmation %>
-  </div>
-  <% if @publisher_html %>
-  	<%= @publisher_html.html_safe %>
-	<% end %>
+  <%= f.text_field :username, :placeholder=>"Set New Username"%><br />
+  <%= f.password_field :password, :placeholder=>"Set a New Password" %>><br />
+  <%= if @user.human %>
+    <p>Confirm you're human for the form go through and save your account.</p>
+    <%= @publisher_html.html_safe %>
+  <% end %>
   <div class="actions"><%= f.submit "Sign Up" %></div>
 <% end %>
