--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,4 +1,4 @@
-<h1>Sign Up</h1>
+<h1>New Account</h1>
 <%= form_for @user do |f| %>
   <% if @user.errors.any? %>
     <div class="error_messages">
@@ -10,19 +10,8 @@
       </ul>
     </div>
   <% end %>
-
-  <div class="field">
-    <%= f.label :username %><br />
-    <%= f.text_field :username %>
-  </div>
-  <div class="field">
-    <%= f.label :password %><br />
-    <%= f.password_field :password %>
-  </div>
-  <div class="field">
-    <%= f.label :password_confirmation %><br />
-    <%= f.password_field :password_confirmation %>
-  </div>
-	<%= @publisher_html.html_safe %>
+  <%= f.text_field :username, :placeholder=>"Username"%><br />
+  <%= f.password_field :password, :placeholder=>"Password" %>><br />
+  <%= @publisher_html.html_safe %>
   <div class="actions"><%= f.submit "Sign Up" %></div>
 <% end %>
